--- a/static/main.css
+++ b/static/main.css
@@ -38,36 +38,22 @@ h3 {
 form {
     display: flex;
     flex-direction: column;
-    width: 320px;
-}
-input[type="text"] {
-    padding: 12px 16px;
-    border: 1px solid #10a37f;
-    border-radius: 4px;
-    margin-bottom: 24px;
+    width: 520px;
 }
 ::placeholder {
     color: #8e8ea0;
     opacity: 1;
 }
-input[type="submit"] {
-    padding: 12px 0;
-    color: #fff;
-    background-color: #10a37f;
-    border: none;
-    border-radius: 4px;
-    text-align: center;
-    cursor: pointer;
-}
 .result {
     font-weight: bold;
     margin-top: 40px;
 }
-textarea {
-    width: 1024px;
-    height: 520px;
-    padding: 12px 16px;
-    border: 1px solid #10a37f;
-    border-radius: 4px;
-    margin-bottom: 24px;
+select {
+    margin-bottom: 20px;
+}
+select[name="gen_img_size"] {
+    display: none;
+}
+select[name="gen_img_n"] {
+    display: none;
 }
